[gd_scene load_steps=34 format=3 uid="uid://bfg831at0l2vh"]

[ext_resource type="Script" uid="uid://drwu0l5bw0tc3" path="res://player_mage/mage.gd" id="1_ogniw"]
[ext_resource type="Texture2D" uid="uid://b8qhnlm5mlpwk" path="res://vfx/Pixel Art Animations - Warrior (FREE)/VFX 1/sprite-sheet.png" id="2_n8tpd"]
[ext_resource type="Texture2D" uid="uid://d1mtkjdkolkx0" path="res://player_mage/block1.png" id="2_picmm"]
[ext_resource type="Texture2D" uid="uid://de868dd7nwqst" path="res://player_mage/cast0.png" id="3_4wwky"]
[ext_resource type="Texture2D" uid="uid://d3veredc1rwpe" path="res://player_mage/block0.png" id="3_27d5s"]
[ext_resource type="Texture2D" uid="uid://da4cuf2n8aqcd" path="res://vfx/Yellow Effect Bullet Impact Explosion 32x32.png" id="3_hcty0"]
[ext_resource type="AudioStream" uid="uid://ucgue5dgv8vd" path="res://sfx/sword-clash-241729.mp3" id="4_857n0"]
[ext_resource type="Texture2D" uid="uid://cjeqlbqnjy0w3" path="res://player_mage/cast1.png" id="4_iwv72"]
[ext_resource type="FontFile" uid="uid://bcy22jv5sfuot" path="res://fonts/ofont.ru_Serati.ttf" id="5_1j614"]
[ext_resource type="Texture2D" uid="uid://n2uhk1r4f7xf" path="res://player_mage/cast2.png" id="5_picmm"]
[ext_resource type="Texture2D" uid="uid://le2gadhoij3c" path="res://player_mage/idle0.png" id="6_4wwky"]
[ext_resource type="Texture2D" uid="uid://ds78vmx6ebq8x" path="res://player_mage/base_frame.png" id="7_27d5s"]
[ext_resource type="Texture2D" uid="uid://oba7vgrt1o6b" path="res://player_mage/idle1.png" id="7_iwv72"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4wwky"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_27d5s")
}, {
"duration": 1.0,
"texture": ExtResource("2_picmm")
}, {
"duration": 1.0,
"texture": ExtResource("3_27d5s")
}, {
"duration": 1.0,
"texture": ExtResource("3_27d5s")
}, {
"duration": 1.0,
"texture": ExtResource("3_27d5s")
}],
"loop": false,
"name": &"block",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_4wwky")
}, {
"duration": 1.0,
"texture": ExtResource("4_iwv72")
}, {
"duration": 1.0,
"texture": ExtResource("5_picmm")
}, {
"duration": 1.0,
"texture": ExtResource("4_iwv72")
}],
"loop": false,
"name": &"cast_spell",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_27d5s")
}, {
"duration": 1.0,
"texture": ExtResource("6_4wwky")
}, {
"duration": 1.0,
"texture": ExtResource("7_iwv72")
}],
"loop": true,
"name": &"idle",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4wwky"]
atlas = ExtResource("2_n8tpd")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwv72"]
atlas = ExtResource("2_n8tpd")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_picmm"]
atlas = ExtResource("2_n8tpd")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_27d5s"]
atlas = ExtResource("2_n8tpd")
region = Rect2(128, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5h42o"]
atlas = ExtResource("2_n8tpd")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yr7d"]
atlas = ExtResource("2_n8tpd")
region = Rect2(128, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbauq"]
atlas = ExtResource("2_n8tpd")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_cdoka"]
atlas = ExtResource("2_n8tpd")
region = Rect2(128, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rtejv"]
atlas = ExtResource("2_n8tpd")
region = Rect2(0, 512, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_55tef"]
atlas = ExtResource("2_n8tpd")
region = Rect2(128, 512, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_wvg4g"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4wwky")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwv72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_picmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27d5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5h42o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yr7d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbauq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cdoka")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rtejv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55tef")
}],
"loop": false,
"name": &"swing",
"speed": 14.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_1wwld"]
atlas = ExtResource("3_hcty0")
region = Rect2(192, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y5vj3"]
atlas = ExtResource("3_hcty0")
region = Rect2(224, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ffra"]
atlas = ExtResource("3_hcty0")
region = Rect2(256, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e355f"]
atlas = ExtResource("3_hcty0")
region = Rect2(288, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_iwv72"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1wwld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y5vj3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ffra")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e355f")
}],
"loop": false,
"name": &"death",
"speed": 4.0
}]

[sub_resource type="Animation" id="Animation_g6k8r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(75, 0)]
}

[sub_resource type="Animation" id="Animation_boad6"]
resource_name = "moving_number"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.5, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(75, 0), Vector2(75, -50)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rgyib"]
_data = {
&"RESET": SubResource("Animation_g6k8r"),
&"moving_number": SubResource("Animation_boad6")
}

[node name="mage" type="Node2D"]
script = ExtResource("1_ogniw")

[node name="animations" type="AnimatedSprite2D" parent="."]
position = Vector2(82, 184)
scale = Vector2(4.8, 4.8)
sprite_frames = SubResource("SpriteFrames_4wwky")
animation = &"block"

[node name="melee" type="AnimatedSprite2D" parent="."]
position = Vector2(740, 160)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_wvg4g")
animation = &"swing"

[node name="death_animation" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(70, 21)
scale = Vector2(7, 7)
sprite_frames = SubResource("SpriteFrames_iwv72")
animation = &"death"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_857n0")
volume_db = -10.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -65.0
offset_top = -45.0
offset_right = 185.0
offset_bottom = 80.0

[node name="label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -72.0
offset_top = -20.0
offset_right = 72.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/paragraph_spacing = 2
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_1j614")
theme_override_font_sizes/font_size = 40
text = "ВОЛШЕБНИК"
horizontal_alignment = 1

[node name="health_label" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -36.0
offset_top = -30.0
offset_right = 36.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/paragraph_spacing = 2
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("5_1j614")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="damage_lable" type="Label" parent="Control"]
z_index = 1
z_as_relative = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 30.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0.94036186, 5.3425133e-06, 3.85046e-07, 1)
theme_override_constants/paragraph_spacing = 2
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("5_1j614")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/damage_lable"]
libraries = {
&"": SubResource("AnimationLibrary_rgyib")
}
